@@ -30,6 +30,26 @@
             <summary>
             </summary>
             <bugs>
+				<bug id="1492" tool="jira">
+                    <description>
+		                Added XML best practice document.
+                    </description>
+                    <contributor>
+                        <name>Werner Guttmann</name>
+                        <email>werner.guttmann@gmx.net</email>
+                    </contributor>
+                    <submitter>
+                        <name>Werner Guttmann</name>
+                        <email>werner.guttmann@gmx.net</email>
+                    </submitter>
+                    <reporter>
+                        <name>Gregory Block</name>
+                        <email>gblock@ctoforaday.com</email>
+                    </reporter>
+                    <type>Enh.</type>
+                    <module>ALL</module>
+                    <date>20060820</date>
+                </bug>
 				<bug id="1500" tool="jira">
                     <description>
 		                Fixed problem with including all required class files in XML JAR.
